Merge multi-project into default.